--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: net
 description: networking library
-version: 0.0.1
+version: 0.1.1
 homepage: https://github.com/hb1love/net
 
 environment:
@@ -10,14 +10,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.4
+  dio: ^4.0.0
+  dartz: ^0.10.1
+  equatable: ^2.0.3
+  freezed_annotation: ^2.1.0
+  json_annotation: ^4.6.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-  mockito:
-  build_runner:
+  test: ^1.21.1
+  build_runner: ^2.0.0
+  freezed: ^2.0.4
+  json_serializable: ^6.3.1
+  mockito: ^5.2.0
 
 flutter:
 
